// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepeatableComponent | Accordion Content should render and match the snapshot 1`] = `
.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c0 {
  border-bottom: none;
}

.c0 > div > div {
  border: 1px solid #dcdce4;
  border-top-color: transparent;
}

.c0 > div:first-child > div {
  border-top: 1px solid #dcdce4;
}

.c0 > div > div,
.c0 > div > div > div {
  border-radius: unset;
}

.c0 > div:first-child > div,
.c0 > div:first-child > div > div {
  border-radius: 4px 4px 0 0;
}

.c0 > div > div[data-strapi-expanded='true'] {
  border: 1px solid #4945ff;
}

<div>
  <div
    class="c0"
  />
  <div
    class="c1"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`RepeatableComponent | Accordion Footer should render and match the snapshot 1`] = `
.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c0 {
  overflow: hidden;
  border-bottom: 1px solid #dcdce4;
  border-right: 1px solid #dcdce4;
  border-left: 1px solid #dcdce4;
  border-radius: 0 0 4px 4px;
}

<div>
  <div
    class="c0"
  />
  <div
    class="c1"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`RepeatableComponent | Accordion Group should render the children passed to it 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

<div>
  <div
    class=""
  >
    I am a child
  </div>
  <div
    class="c0"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`RepeatableComponent | Accordion Group should render the error if there is one 1`] = `
.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c1 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #d02b20;
}

.c0 {
  padding-top: 4px;
}

<div>
  <div
    class=""
  >
    I am a child
    <div
      class="c0"
    >
      <span
        class="c1"
      >
        I have an error
      </span>
    </div>
  </div>
  <div
    class="c2"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;
